<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">NBP IPAWS</string>
  <string name="alert_service_label">NBP IPAWS Alert Service</string>
  <string name="settings_activity_label">NBP IPAWS Settings</string>

  <string name="main_switch_off">Stopped</string>
  <string name="main_switch_on">Running</string>

  <string name="action_stopSpeaking">Stop Speaking</string>
  <string name="action_currentAlerts">Current Alerts</string>
  <string name="action_selectAlert">Select an Alert</string>
  <string name="action_manageAreas">Manage Areas</string>
  <string name="action_selectState">Select a State</string>
  <string name="action_selectCounties">Select Counties</string>
  <string name="action_removeAreas">Remove Areas</string>
  <string name="action_selectAreas">Select Areas</string>
  <string name="action_applicationSettings">Application Settings</string>
  <string name="action_aboutApplication">About Application</string>

  <string name="option_save">Save</string>
  <string name="option_remove">Remove</string>

  <string name="alert_title">Alert</string>
  <string name="alert_sender">Issued by</string>
  <string name="alert_sent">Issued at</string>
  <string name="alert_effective">Assessed at</string>
  <string name="alert_onset">Expected at</string>
  <string name="alert_expires">Expires at</string>
  <string name="alert_event">Type of Event</string>
  <string name="alert_area">Affected Area(s)</string>

  <string name="session_stateStarting">Starting</string>
  <string name="session_stateDisconnected">Disconnected</string>
  <string name="session_stateConnecting">Connecting</string>
  <string name="session_stateConnected">Connected</string>

  <plurals name="alert">
    <item quantity="one">%d alert</item>
    <item quantity="other">%d alerts</item>
  </plurals>

  <string name="about_versionNumber">Version Number</string>
  <string name="about_buildTime">Build Time</string>
  <string name="about_sourceRevision">Source Revision</string>

  <string name="message_no_session">alert service not running</string>
  <string name="message_session_error">server communication error</string>
  <string name="message_long_response">data not available - try later</string>
  <string name="message_no_alerts">There are no alerts for any of the areas that have been selected.</string>
  <string name="message_no_areas">No areas have been selected.</string>
</resources>
