<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

  <TextView
    android:id="@+id/state"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   />

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="stopSpeaking"
    android:text="@string/action_stopSpeaking"
   />

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="currentAlerts"
    android:text="@string/action_currentAlerts"
   />

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="manageAreas"
    android:text="@string/action_manageAreas"
   />

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="requestedAreas"
    android:text="@string/action_requestedAreas"
   />

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="applicationSettings"
    android:text="@string/action_applicationSettings"
   />

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="aboutApplication"
    android:text="@string/action_aboutApplication"
   />
</LinearLayout>
