<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  >

  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TableRow>
      <TextView android:text="@string/about_versionNumber" android:focusable="true" />
      <TextView android:id="@+id/about_versionNumber" />
    </TableRow>

    <TableRow>
      <TextView android:text="@string/about_buildTime" />
      <TextView android:id="@+id/about_buildTime" />
    </TableRow>

    <TableRow>
      <TextView android:text="@string/about_sourceRevision" />
      <TextView android:id="@+id/about_sourceRevision" />
    </TableRow>

    <TextView android:id="@+id/about_copyright" />
  </TableLayout>
</FrameLayout>
